Update fonts, add highlight animation, localize side panel
- Switched user info and side panel fonts to Roboto for a modern look
- Added smooth color transition animation to side panel highlighter
- Localized side panel menu items from English to Vietnamese

--- a/Martify/MainWindow.xaml
+++ b/Martify/MainWindow.xaml
@@ -88,14 +88,14 @@
                                            Foreground="White" 
                                            VerticalAlignment="Bottom"
                                            HorizontalAlignment="Center"
-                                           Margin="0,7.5,0,0"/>
+                                           Margin="0,7.5,0,0" FontFamily="Roboto"/>
 
                                 <TextBlock Text="{Binding Email}"
                                            Margin="0,0,0,0"
                                            FontSize="12"
                                            Foreground="White"
                                            VerticalAlignment="Bottom"
-                                           HorizontalAlignment="Center"/>
+                                           HorizontalAlignment="Center" FontFamily="Roboto Medium"/>
                             </StackPanel>
                         </StackPanel>
                     </Grid>
